--- a/styles/case-study.css
+++ b/styles/case-study.css
@@ -1,3 +1,7 @@
+header {
+  padding-bottom: 0;
+}
+
 .case-hero {
   height: 100%;
   width: 80%;
@@ -7,8 +11,7 @@
 .case-hero img {
   margin: 0 auto;
   width: 100%;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding: 5rem;
 }
 
 .hero-text {
