--- a/styles/landing.css
+++ b/styles/landing.css
@@ -37,10 +37,10 @@ nav .rose-branch {
   height: 100%;
 }
 
-.text a:hover {
-  color: #950444;
+.second a:hover {
+  color: #2f2f2f;
   font-weight: 700;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 .projects h3 {
@@ -60,7 +60,7 @@ nav .rose-branch {
 
 .project-block-coop {
   background: rgb(229,58,32);
-  background: linear-gradient(112deg, rgba(229,58,32,1) 0%, rgba(212,176,140,1) 38%,
+  background: linear-gradient(112deg, rgb(55, 96, 130) 0%, #d0cece 38%,
   rgba(172,216,217,1) 100%);
   padding-top: 3rem;
   padding-bottom: 5rem;
@@ -78,6 +78,7 @@ nav .rose-branch {
 @media screen and (max-width: 425px) {
   .home-hero {
     padding: 0;
+    width: 80%;
   }
 
   .content {
