updated home page layout

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,57 +1,48 @@
-.about-me .hero {
-  height: 100%;
-  margin: auto;
-  text-align: center;
-}
-
 .about-me header {
   padding-bottom: 0;
-  background: #eaeaea;
+  background: none;
 }
 
-.photo img {
-  width: 100%;
+.about-container {
+  text-align: left;
+  padding-bottom: 2rem;
 }
 
-.about {
+
+.about-container {
+  width: 80%;
+  padding-bottom: 3rem;
+}
+
+.about-text {
+  width: 75%;
   margin: auto;
-  width: 65%;
-  padding-top: 2rem;
-  padding-bottom: 5rem;
 }
 
 .capabilities {
-  padding: 5rem 0;
+  padding: 5rem 0 8rem;
   background: rgb(102,191,145);
-  background: linear-gradient(166deg, rgba(129,241,183,0.67) 0%,
-  rgba(255,211,213,0.78) 65%,
-  rgba(251,234,89,0.38) 100%);
+  background: linear-gradient(-225deg, #69EACB 0%, #EACCF8 48%, #6654F1 100%);
+}
+
+.capabilities-container {
+  width: 80%;
 }
 
 .capabilities .caps {
   margin: auto;
-  width: 65%;
+  width: 75%;
   display: block;
   height: 100%;
 }
 
-.capabilities div {
-  width: 48%;
+.first {
+  padding: 0;
 }
 
-.capabilities .skills {
-  display: inline-block;
-  float: left;
-  padding-right: 1rem;
-  margin-right: .5rem;
-}
-
-.capabilities .software {
-  display: inline-block;
-  float: right;
-  position: relative;
-  padding-left: 1rem;
-  margin-left: .5rem;
+.second {
+  padding-left: 2rem;
+  padding-right: 0;
 }
 
 .moodboard {
@@ -71,9 +62,21 @@
 
 /*Media Queries*/
 @media screen and (max-width: 768px) {
-  .about, .hero {
-    width: 80%;
-    display: block;
+  .contact-container {
+      width: 100%;
+      display: block;
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    .first, .second {
+      width: 100%;
+      display: inline-block;
+      margin: 0 auto;
+      float: left;
+      padding: 1rem;
+    }
+
   }
 
   .capabilities .skills, .capabilities .software {
@@ -97,6 +100,10 @@
     padding: 0;
   }
 
+  .about-container {
+    width: 100%;
+  }
+
   .photo img {
     width: 180%;
     float: right;
@@ -106,5 +113,10 @@
   button {
     margin-bottom: 1rem;
   }
+}
 
+@media screen and (min-width: 1440px) {
+  .second {
+    padding-top: 2rem;
+  }
 }
