--- a/styles/case-study.css
+++ b/styles/case-study.css
@@ -65,24 +65,32 @@ h2, h3 {
 }
 
 .arrows img {
-  height: 40px;
-  margin: 1rem;
+  height: 25px;
 }
 
 .right {
   float: right;
 }
 
+.navigation {
+  padding-top: 5rem;
+}
+
 .navigation .case-studies .first {
   padding: 3rem;
-  background: rgb(89,51,75);
+  /*background: rgb(89,51,75);
   background: linear-gradient(166deg, rgba(89,51,75,1) 0%,
-  rgba(165,137,154,1) 62%, rgba(89,51,75,1) 100%);
+  rgba(165,137,154,1) 62%, rgba(89,51,75,1) 100%);*/
 }
 
 .navigation .case-studies .second {
   padding: 3rem;
-  background: rgb(229,58,32);
+  /*background: rgb(229,58,32);
   background: linear-gradient(112deg, rgba(229,58,32,1) 0%, rgba(212,176,140,1) 38%,
-  rgba(172,216,217,1) 100%);
+  rgba(172,216,217,1) 100%);*/
+}
+
+#contact {
+  padding-top: 0;
+  background: none;
 }
