--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,3 +1,7 @@
+.hero {
+  width: 80%;
+}
+
 nav .rose-branch {
   clear: both;
   padding-top: 0;
@@ -14,9 +18,9 @@ nav .rose-branch {
 /* home-hero*/
 .home-hero {
   height: 100%;
-  width: 65%;
+  width: 75%;
   margin: auto;
-  padding: 20vh 0px;
+  padding: 0 0 5rem;
   color: #2f2f2f;
 }
 
@@ -37,14 +41,27 @@ nav .rose-branch {
   height: 100%;
 }
 
-.second a:hover {
-  color: #2f2f2f;
-  font-weight: 700;
-  text-decoration: underline;
+.projects-container {
+  width: 80%;
+  margin: 50px auto;
+}
+
+.projects-container .first, .projects-container .second {
+  padding: 0;
 }
 
 .projects h3 {
   padding: 0;
+}
+
+.rfs-image img, .coop-image img {
+  width: 80%;
+  margin: auto;
+}
+
+.projects-container .text {
+  width: 80%;
+  padding: 2rem;
 }
 
 .project-block-rfs {
@@ -69,14 +86,10 @@ nav .rose-branch {
   display: block;
 }
 
-.content {
-  padding: 5rem;
-  clear: none;
-}
 
 /*Media Queries*/
 @media screen and (max-width: 425px) {
-  .home-hero {
+  .home-hero, .contact-text {
     padding: 0;
     width: 80%;
   }
@@ -87,6 +100,10 @@ nav .rose-branch {
 
   .project-block-rfs, .project-block-coop {
     padding: 0;
+  }
+
+  button {
+    margin-bottom: 1rem;
   }
 }
 
@@ -110,11 +127,5 @@ nav .rose-branch {
 @media screen and (max-width: 1024px) {
   .first, .second {
     padding: 1rem;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .second {
-    padding: 3rem;
   }
 }
